# SmileX-Python-DB-Template

./: .gitignore  LICENSE  README.md  __init__.py  alembic.ini  alembic_prod.ini  main.py  pyproject.toml
alembic/: env.py
business/sys/: __init__.py  association_tables.py  config.py  dict.py  menu.py  permission.py  role.py  user.py
database/: __init__.py  config.py
database/manager/: async_manager.py  sync_manager.py
database/models/: base.py  dataclasses.py
database/plugins/: __init__.py  setup_database.py
database/utils/: snowflake.py  str_utils.py  timezone.py  url_builder.py
