[project]
name = "cloud-database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.3.2",
    "aiopg>=1.4.0",
    "alembic>=1.18.0",
    "asyncpg>=0.31.0",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.45",
    "tzdata>=2025.3",
]
